<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box one</string>
    <string name="bow_two">Bow two</string>
    <string name="box_four">Box four</string>
    <string name="box_five">Box five</string>
    <string name="box_three">Box three</string>
    <string name="how_to_play">How to play:</string>
    <string name="tap_the_boxes_and_buttons">Tap the boxes and buttons</string>
    <string name="btn_red">Red</string>
    <string name="btn_yellow">Yellow</string>
    <string name="btn_green">Green</string>
</resources>